rework handling of internal mods